  the MediaWiki:Copyupload-allowed-domains system message to define which
  domains can be used with the upload-by-url tool.
* $wgLBFactoryConf['configCallback'] can be set to a callback function that
  returns an array with keys to update in $wgLBFactoryConf. This can be used
  to update the database configuration on the fly, e.g. to take replica hosts
  out of rotation.
* …

==== Changed configuration ====
* $wgInvalidUsernameCharacters now contains the char '>',
  reserved delimiter for external user names.
* …

==== Removed configuration ====
* $wgMultiContentRevisionSchemaMigrationStage - Migration is over, was
  deprecated since 1.35.
* $wgWikiFarmSiteDetector – experimental setting removed without replacement.
  Use the MW_WIKI_NAME environment variable to specifiy the name of the site
  to load configuration for. Using the WIKI_NAME environment variable for this
  purpose is deprecated.
* $wgParserCacheUseJson - the ParserCache now always uses JSON serialization.
  Reading old non-JSON cache entries is still supported. The setting had been
  deprecated since 1.36.
* $wgAllowJavaUploads - To allow uploads of JAR files, remove application/java
  from $wgMimeTypeExclusions.
* $wgMaxRedirects has been removed. This feature never worked as intended,
  see T296430.
* $wgElementTiming has been removed. This feature was experimental,
  and disabled by default.
* $wgPriorityHints and $wgPriorityHintsRatio have been removed.
  This feature was experimental, and disabled by default.
* $wgActorTableSchemaMigrationStage has been removed. Migration is over.
* In $wgObjectCaches, globalKeyLB and localKeyLB are no longer supported.
* $wgLegacySchemaConversion - This global configuration has been
  removed because it was unused.
* $wgInterwikiPrefixDisplayTypes - This global configuration has been
  removed because it was unused.
* …

=== New user-facing features in 1.39 ===
* Optional automatic user creation on page save ($wgAutoCreateTempUser)