@@ -682,4 +682,41 @@ class WebRequestTest extends MediaWikiIntegrationTestCase {
 		}
 		$_SERVER = $vars;
 	}
+
+	private const INTERNAL_SERVER = 'http://wiki.site';
+
+	/**
+	 * @dataProvider provideMatchURLForCDN
+	 * @covers WebRequest::matchURLForCDN
+	 */
+	public function testMatchURLForCDN( $url, $cdnUrls, $matchOrder, $expected ) {
+		$this->setServerVars( [ 'REQUEST_URI' => $url ] );
+		$this->overrideConfigValues( [
+			MainConfigNames::InternalServer => self::INTERNAL_SERVER,
+			MainConfigNames::CdnMatchParameterOrder => $matchOrder,
+		] );
+		$request = new WebRequest();
+		$this->assertEquals( $expected, $request->matchURLForCDN( $cdnUrls ) );
+	}
+
+	public static function provideMatchURLForCDN() {
+		$cdnUrls = [
+			self::INTERNAL_SERVER . '/Title',
+			self::INTERNAL_SERVER . '/w/index.php?title=Title&action=history',
+		];
+		return [
+			[ self::INTERNAL_SERVER . '/Title', $cdnUrls, /* matchOrder= */ false, true ],
+			[ self::INTERNAL_SERVER . '/Title', $cdnUrls, /* matchOrder= */ true, true ],
+			[ self::INTERNAL_SERVER . '/Foo', $cdnUrls, /* matchOrder= */ false, false ],
+			[ self::INTERNAL_SERVER . '/Foo', $cdnUrls, /* matchOrder= */ true, false ],
+			[ self::INTERNAL_SERVER . '/Thing', $cdnUrls, /* matchOrder= */ false, false ],
+			[ self::INTERNAL_SERVER . '/Thing', $cdnUrls, /* matchOrder= */ true, false ],
+			[ self::INTERNAL_SERVER . '/w/index.php?action=history&title=Foo', $cdnUrls, /* matchOrder= */ false, false ],
+			[ self::INTERNAL_SERVER . '/w/index.php?action=history&title=Foo', $cdnUrls, /* matchOrder= */ true, false ],
+			[ self::INTERNAL_SERVER . '/w/index.php?title=Thing&action=history', $cdnUrls, /* matchOrder= */ false, false ],
+			[ self::INTERNAL_SERVER . '/w/index.php?action=history&title=Thing', $cdnUrls, /* matchOrder= */ true, false ],
+			[ self::INTERNAL_SERVER . '/w/index.php?action=history&title=Title', $cdnUrls, /* matchOrder= */ false, true ],
+			[ self::INTERNAL_SERVER . '/w/index.php?action=history&title=Title', $cdnUrls, /* matchOrder= */ true, false ],
+		];
+	}
 }
