@@ -39,6 +39,9 @@ For notes on 1.38.x and older releases, see HISTORY.
   returns an array with keys to update in $wgLBFactoryConf. This can be used
   to update the database configuration on the fly, e.g. to take replica hosts
   out of rotation.
+* $wgCdnMatchParameterOrder can be set to false if MediaWiki is behind a CDN
+  that re-orders query parameters. This will make the code that matches request
+  URLs to canonical CDN URLs insensitive to parameter order.
 * …
 
 ==== Changed configuration ====
